<resources>
    <string name="app_name">Final</string>
    <string name="forget_password"><u>Forgot Password</u></string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="image_title">asdasdasdasdasd</string>
    <string name="title_activity_report">Report</string>
    <string name="your_password">Your Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="your_username">Your Username</string>
    <string name="log_in">Log In</string>
    <string name="sign_in">Sign In</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="email">Email</string>
    <string name="accepting_our_licences">Accepting our licences</string>
    <string name="infomation">Infomation</string>
    <string name="person">Person</string>
    <string name="news">News</string>
    <string name="post">Post</string>
    <string name="hello_world">Hello World</string>
    <string name="test">Hello Worlddasdasdas asdasd sadasd asdasd asdas asdasdasdasasdasdasd
        sadsdsdsdsdsasdasdasdasdas asdasdasdasd asdasd asda weqweqweqweqweqwrqwrqwrqwrqwrqwrqw </string>

    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="item1">item1</string>
</resources>
