<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sky.afinal.view.Login.LoginActivity"
    android:weightSum="1"
    android:background="@color/background"
    >


    <ImageView
        android:layout_width="150dp"
        android:layout_height="120dp"
        app:srcCompat="@drawable/ic_action_name"
        android:id="@+id/imageView2"
        android:scaleType="centerCrop"
        android:tint="@color/cast_expanded_controller_progress_text_color"
        android:layout_marginTop="35dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="@dimen/editWidth"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/nameUser_edittText"
        android:hint="@string/your_username"
        android:backgroundTint="@color/cast_expanded_controller_progress_text_color"
        android:textColorHint="@color/wallet_secondary_text_holo_dark"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:layout_width="@dimen/editWidth"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:ems="10"
        android:layout_marginBottom="15dp"
        android:id="@+id/passUser_edittText"
        android:textColor="@color/cast_expanded_controller_background_color"
        android:hint="@string/your_password"
        android:backgroundTint="@color/cast_expanded_controller_progress_text_color"
        android:textColorHint="@color/wallet_secondary_text_holo_dark"
        android:layout_below="@+id/nameUser_edittText"
        android:layout_alignRight="@+id/nameUser_edittText"
        android:layout_alignStart="@+id/nameUser_edittText"
        android:layout_alignEnd="@+id/nameUser_edittText"
        android:layout_alignLeft="@+id/nameUser_edittText"
    />
    <Button
        android:id="@+id/button_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/passUser_edittText"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_menu"
        android:text="@string/log_in"
        /> <Button
    android:id="@+id/button_signin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_menu"
        android:text="@string/sign_in"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:linksClickable="true"
        android:onClick="forgotPass"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/Forgot_textview"
        android:layout_marginBottom="15dp">

    </TextView>
        <!--android:textAppearance="@color/cast_expanded_controller_ad_container_white_stripe_color"-->

</RelativeLayout>
